@@ -26,8 +26,8 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
-#ifndef __SDC51_LIMITS_H
-#define __SDC51_LIMITS_H 1
+#ifndef __STDC_VERSION_LIMITS_H__
+#define __STDC_VERSION_LIMITS_H__ __STDC_VERSION__
 
 #define CHAR_BIT    8    /* bits in a char */
 #define SCHAR_MAX   127
@@ -65,7 +65,7 @@
 #define ULLONG_MAX  18446744073709551615ULL
 #endif
 
-#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 200300L
+#if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 202311L
 #define BITINT_MAXWIDTH __SDCC_BITINT_MAXWIDTH
 #define USHRT_WIDTH 16
 #define UINT_WIDTH 16
